samples/wig/should_fail/missing_chr.wig
variableStep
1 10
2 5
3 10
10 0
